<resources>
    <string name="app_name">MUJ Assignment 2</string>
    <string name="separator">:</string>
    <string name="prompt_name">Enter Your Name</string>
    <string name="prompt_email">Enter Your Email ID</string>
    <string name="prompt_gender">Choose Your Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="prompt_password">Create a Password</string>
    <string name="prompt_confirm_password">Confirm the Password</string>
    <string name="prompt_mobile">Mobile No</string>
    <string name="prompt_dob">Date of Birth</string>
    <string name="prompt_address">Enter Your Address</string>
    <string name="prompt_location">Select Your Location</string>
    <string name="placeholder_name">Lorem Ipsum</string>
    <string name="placeholder_email">lorem.ipsum@server.com</string>
    <string name="placeholder_mobile">+91 9876543210</string>
    <string name="placeholder_address">7, New Delhi</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>

    <string-array name="location_array">
        <item>India</item>
        <item>USA</item>
        <item>Canada</item>
        <item>England</item>
        <item>Australia</item>
    </string-array>
</resources>